// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/time-picker/demo/12hours.md correctly 1`] = `
<div>
  <span
    class="ant-time-picker "
  >
    <input
      class="ant-time-picker-input"
      placeholder="请选择时间"
      readonly=""
      type="text"
      value=""
    />
    <span
      class="ant-time-picker-icon"
    />
  </span>
  <span
    class="ant-time-picker "
  >
    <input
      class="ant-time-picker-input"
      placeholder="请选择时间"
      readonly=""
      type="text"
      value=""
    />
    <span
      class="ant-time-picker-icon"
    />
  </span>
  <span
    class="ant-time-picker "
  >
    <input
      class="ant-time-picker-input"
      placeholder="请选择时间"
      readonly=""
      type="text"
      value=""
    />
    <span
      class="ant-time-picker-icon"
    />
  </span>
</div>
`;

exports[`renders ./components/time-picker/demo/addon.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <input
    class="ant-time-picker-input"
    placeholder="请选择时间"
    readonly=""
    type="text"
    value=""
  />
  <span
    class="ant-time-picker-icon"
  />
</span>
`;

exports[`renders ./components/time-picker/demo/basic.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <input
    class="ant-time-picker-input"
    placeholder="请选择时间"
    readonly=""
    type="text"
    value=""
  />
  <span
    class="ant-time-picker-icon"
  />
</span>
`;

exports[`renders ./components/time-picker/demo/disable-options.md correctly 1`] = `
<div>
  <span
    class="ant-time-picker "
  >
    <input
      class="ant-time-picker-input"
      placeholder="Just Disabled"
      readonly=""
      type="text"
      value=""
    />
    <span
      class="ant-time-picker-icon"
    />
  </span>
  <span
    class="ant-time-picker "
  >
    <input
      class="ant-time-picker-input"
      placeholder="Hide Directly"
      readonly=""
      type="text"
      value=""
    />
    <span
      class="ant-time-picker-icon"
    />
  </span>
</div>
`;

exports[`renders ./components/time-picker/demo/disabled.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <input
    class="ant-time-picker-input"
    disabled=""
    placeholder="请选择时间"
    readonly=""
    type="text"
    value="12:08:23"
  />
  <span
    class="ant-time-picker-icon"
  />
</span>
`;

exports[`renders ./components/time-picker/demo/hide-column.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <input
    class="ant-time-picker-input"
    placeholder="请选择时间"
    readonly=""
    type="text"
    value="12:08"
  />
  <span
    class="ant-time-picker-icon"
  />
</span>
`;

exports[`renders ./components/time-picker/demo/size.md correctly 1`] = `
<div>
  <span
    class="ant-time-picker ant-time-picker-large"
  >
    <input
      class="ant-time-picker-input"
      placeholder="请选择时间"
      readonly=""
      type="text"
      value="12:08:23"
    />
    <span
      class="ant-time-picker-icon"
    />
  </span>
  <span
    class="ant-time-picker "
  >
    <input
      class="ant-time-picker-input"
      placeholder="请选择时间"
      readonly=""
      type="text"
      value="12:08:23"
    />
    <span
      class="ant-time-picker-icon"
    />
  </span>
  <span
    class="ant-time-picker ant-time-picker-small"
  >
    <input
      class="ant-time-picker-input"
      placeholder="请选择时间"
      readonly=""
      type="text"
      value="12:08:23"
    />
    <span
      class="ant-time-picker-icon"
    />
  </span>
</div>
`;

exports[`renders ./components/time-picker/demo/value.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <input
    class="ant-time-picker-input"
    placeholder="请选择时间"
    readonly=""
    type="text"
    value=""
  />
  <span
    class="ant-time-picker-icon"
  />
</span>
`;
